--- a/gb/14/5/22/n4161624.md
+++ b/gb/14/5/22/n4161624.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/osgirb392/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/osgirb392/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/osgirb392/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/osgirb392/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/osgirb392/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/osgirb392/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/osgirb392/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>纽超热房市无解 移民又成替罪羊？</h2>
 
 <h6></h6>
 <hr>
-	<p>【大纪元2014年05月22日讯】（大纪元记者李扪心<ahref="https://github.com/osgirb392/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>综合报导）有关奥克兰<ahref="https://github.com/osgirb392/djy/blob/master/gb/tag/%E6%88%BF.md#1">房</a>价的问题，老早就是个烫手的山芋，在平常的年份，一直也都是僵持不下，但似乎又谁都拿不出最好的办法。</p>
-<p>一到大选年，这个问题就更敏感，因为不管是谁执政，都需要解决办法；不过<ahref="https://github.com/osgirb392/djy/blob/master/gb/tag/%E6%88%BF.md#1">房</a>市一旦和移民问题混在一起，出于自我保护的本能，大多数本地民众会倾向于相信它们之间有联系，因而最后往往遭难的都是移民。</p>
+	<p>【大纪元2014年05月22日讯】（大纪元记者李扪心<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>综合报导）有关奥克兰<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%88%BF.md#1">房</a>价的问题，老早就是个烫手的山芋，在平常的年份，一直也都是僵持不下，但似乎又谁都拿不出最好的办法。</p>
+<p>一到大选年，这个问题就更敏感，因为不管是谁执政，都需要解决办法；不过<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%88%BF.md#1">房</a>市一旦和移民问题混在一起，出于自我保护的本能，大多数本地民众会倾向于相信它们之间有联系，因而最后往往遭难的都是移民。</p>
 <p>澳洲总理亚伯特去年上台后的第一件事，就是兑现他大选时的承诺，把数千名乘船到澳洲的逃难者送出澳洲、安置到巴布亚新几内亚。</p>
-<p>本周发布的2项数据，又让房价和移民这2个话题摆上台面。一个是经合组织的调查报告，显示<ahref="https://github.com/osgirb392/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>的房价被高估70%，成为全球最离谱的房屋估价；另一个是今年净移民的数量，创历史新高，原因是移入最多而同时移出最少。</p>
+<p>本周发布的2项数据，又让房价和移民这2个话题摆上台面。一个是经合组织的调查报告，显示<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>的房价被高估70%，成为全球最离谱的房屋估价；另一个是今年净移民的数量，创历史新高，原因是移入最多而同时移出最少。</p>
 <p>房市过热 如何解决？</p>
 <p>经合组织在调查报告中说，与相应的工资和租金水平相比，新西兰的房市严重失衡，去年，新西兰房价上涨超过8％，今年则仍在持续上升。房价升幅远远高出民众工资增长的幅度。</p>
 <p>经合组织去年的调查数据显示，奥克兰房屋中间价和平均工资的比率大约是8.7，按照目前的房价增长速度和工资增长速度，这个比率应该已经超过了10，也就是说不吃不喝10年才能挣足房费，如果再加上利息，在奥克兰买个低档的50-60万的房恐怕都不容易。</p>
@@ -36,40 +36,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/14/3/20/n4110684.md#1">华人在纽购房有增无减 各界反响强烈</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/14/3/27/n4116537.md#1">纽净流入移民创10年新高  房市吃紧</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/14/4/7/n4125354.md#1">资深人士提醒关注：房市泡沫为全球趋势</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/14/4/15/n4132183.md#1">纽国有配给房被接管  终生制被取消</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/3/20/n4110684.md#1">华人在纽购房有增无减 各界反响强烈</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/3/27/n4116537.md#1">纽净流入移民创10年新高  房市吃紧</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/4/7/n4125354.md#1">资深人士提醒关注：房市泡沫为全球趋势</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/4/15/n4132183.md#1">纽国有配给房被接管  终生制被取消</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/10/n10902151.md#1" target="_blank">龙延：中共道路是魔鬼的选择</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/24/n10509014.md#1" target="_blank">驱除共产 回归传统 华府万人传递希望</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/18/n11196827.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(3)</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md#1" target="_blank">出版24年 42种语言 拥有全球读者的转法轮</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/22/n12767168.md#1">辛丑八卦2021年两岸国运</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/19/n12762219.md#1">解密文件：美CIA或观察到火星上的古代人类</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/20/12/30/n12653772.md#1">【命理】相士算他活不过30岁 为何不应验？</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/21/n12765804.md#1">预言中的大瘟疫和中国变局</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/18/3/8/n10200680.md#1">【西游义趣】之二：一个信念贯穿沙僧的前世今生</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/24/n12772629.md#1">【财商天下】习点赞航天股价大跌 二十大开战？</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/25/n12773369.md#1">【远见快评】如何建美式极权？左派给惊人答案</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/25/n12774955.md#1">【新闻大家谈】两暗桩 美国会警长曝悲剧内幕</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12768556.md#1">被拍到与冯绍峰游三亚 赵丽颖高情商称呼婆婆</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12770385.md#1">北京纪念华国锋百年冥诞 习近平为何不出席</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12768678.md#1">忧江泽民死后遭清算 博裕资本部分迁往新加坡</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12768556.md#1">被拍到与冯绍峰游三亚 赵丽颖高情商称呼婆婆</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/22/n12768344.md#1">吴孟达确诊罹患肝癌 手术后没力气说话</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12769489.md#1">林志玲夫妇首度合体代言 AKIRA全程中文应答</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12769457.md#1">Janet速产二胎不到3小时“来不及打无痛分娩”</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12769225.md#1">演艺圈收入骤减 贺一航之子曾治豪到餐厅实习</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12769229.md#1">俄罗斯奇特的自然景观──“贝加尔湖禅”</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12768699.md#1">缺乏维生素D易感染新冠 1招补充最快</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/19/n12762302.md#1">偏头痛有哪些前兆？有时像中风 掌握1方法防发作</a></li>
-<li><a href="https://github.com/osgirb392/djy/blob/master/gb/21/2/23/n12770063.md#1">春天是轻松减肥和排毒的绝佳时机</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959110.md#1">【新闻看点】“抗疫胜利”炒过头 中共出手抓人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959398.md#1">【疫情最前线】意大利：中国没送任何东西！</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11957882.md#1">李文亮一女同事病逝 其夫涉嫌活摘器官</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11960123.md#1">【拍案惊奇】川普指中共延误 武汉二次爆发预警</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11958206.md#1">TWICE周子瑜首本个人照片书 4月27日发行</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11955332.md#1">澳洲性侵案7罪名缠2年 男星高云翔获判无罪</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11937754.md#1">他们为官怎能让老虎自动离界不扰人？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/osgirb392/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/osgirb392/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/5/22/n4161624.htm">纽超热房市无解 移民又成替罪羊？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/5/22/n4161624.htm">纽超热房市无解 移民又成替罪羊？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/osgirb392/djy/blob/master/gb/14/5/22/n4161624.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/osgirb392/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/osgirb392/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/osgirb392/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/osgirb392/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osgirb392/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/14/5/22/n4161624.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
